Fix recordview header on mobile

--- a/core/app/shell/src/themes/suite8/css/layout/_recordview-mobile.scss
+++ b/core/app/shell/src/themes/suite8/css/layout/_recordview-mobile.scss
@@ -42,9 +42,6 @@
     .record-view-container {
         .tabs-layout {
             .nav-tabs {
-                .nav-item {
-                    margin-bottom: 1px;
-                }
                 .tab-link {
                     padding-left: 0.5em;
                     padding-right: 0.5em;
